Vinculación de Homecomponent con el servicio
Muestra de datos por pantalls

--- a/src/app/components/profile-card/profile-card.component.html
+++ b/src/app/components/profile-card/profile-card.component.html
@@ -1,1 +1,5 @@
-<p>profile-card works!</p>
+<div class="card shadow"> 
+    <h3 class="card-title">{{miProfile?.first_name}}</h3>
+    <p> </p>
+  </div>
+  
