--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -1,1 +1,10 @@
-<p>view-profile works!</p>
+<section class="container mt-3">
+    <img src="{{oneProfile?.image}}" alt="Profile photo">
+    <h1>{{oneProfile?.first_name}}</h1>
+    <h1>{{oneProfile?.last_name}}</h1>
+    <h1>{{oneProfile?.username}}</h1>
+    <h1>{{oneProfile?.email}}</h1>
+    <a class="btn btn-danger" (click)="deleteProfile(onePost._id)">Borrar</a>
+    <a class="btn btn-warning">Actualizar</a>
+    <a class="btn btn-light">Volver al listado</a>
+</section>
