--- a/src/app/components/profile-card/profile-card.component.html
+++ b/src/app/components/profile-card/profile-card.component.html
@@ -3,6 +3,6 @@
     <div class="flex-column">
         <a class="btn btn-light" [routerLink]="['/user', miProfile?._id]">Ver detalle</a>
         <a class="btn btn-warning">Actualizar</a>
-        <a class="btn btn-danger">Borrar</a>
+        <a class="btn btn-danger" (click)="deleteProfile(oneProfile._id)">Borrar</a>
     </div>
   </div>
