--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,1 +1,27 @@
-<p>form works!</p>
+<section class="container mt-3">
+<h1> NUEVO USUARIO</h1>
+    <form [formGroup]="profileForm" (ngSubmit)="getDataForm()">
+        <div>
+            <label for="first_name">Nombre usuario</label>
+            <input type="text" placeholder="Introduzca nombre de usuario" class="form form-control" formControlName="first_name" id="first_name">
+        </div>
+
+        <div>
+            <label for="last_name">Apellido Usuario</label>
+            <input type="text" placeholder="Introduzca apellido de usuario" class="form form-control" formControlName="last_name" id="last_name">
+        </div>
+
+        <div>
+            <label for="email">Email Usuario</label>
+            <input type="text" placeholder="Introduzca email de usuario" class="form form-control" formControlName="email" id="email">
+        </div>
+
+        <div>
+            <label for="image">Imagen Usuario</label>
+            <input type="text" placeholder="Introduzca url de foto usuario" class="form form-control" formControlName="image" id="image">
+        </div>
+
+        <input type="submit" class="btn btn-danger" value="Guardar">
+    </form>
+
+</section>
