--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -5,6 +5,6 @@
     <h1>{{oneProfile?.username}}</h1>
     <h1>{{oneProfile?.email}}</h1>
     <a class="btn btn-danger" (click)="deleteProfile(oneProfile?._id)">Borrar</a>
-    <a class="btn btn-warning">Actualizar</a>
-    <a class="btn btn-light">Volver al listado</a>
+    <a class="btn btn-warning" (click)="updateProfile(oneProfile?._id)">Actualizar</a>
+    <a class="btn btn-light" [routerLink]="['/home']">Volver al listado</a>
 </section>
