--- a/src/app/components/profile-card/profile-card.component.html
+++ b/src/app/components/profile-card/profile-card.component.html
@@ -2,7 +2,7 @@
     <h3 class="card-title">{{miProfile?.first_name}}</h3>
     <div class="flex-column">
         <a class="btn btn-light" [routerLink]="['/user', miProfile?._id]">Ver detalle</a>
-        <a class="btn btn-warning">Actualizar</a>
+        <a class="btn btn-warning" [routerLink]="['/updateuser', miProfile?._id]">Actualizar</a>
         <a class="btn btn-danger" (click)="deleteProfile(miProfile?._id)">Borrar</a>
     </div>
   </div>
