--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -4,24 +4,29 @@
         <div>
             <label for="first_name">Nombre usuario</label>
             <input type="text" placeholder="Introduzca nombre de usuario" class="form form-control" formControlName="first_name" id="first_name">
+            <p class="error" *ngIf="checkControl('first_name', 'required')">Este campo es requerido</p>
         </div>
 
         <div>
             <label for="last_name">Apellido Usuario</label>
             <input type="text" placeholder="Introduzca apellido de usuario" class="form form-control" formControlName="last_name" id="last_name">
+            <p class="error" *ngIf="checkControl('last_name', 'required')">Este campo es requerido</p>
         </div>
 
         <div>
             <label for="email">Email Usuario</label>
             <input type="text" placeholder="Introduzca email de usuario" class="form form-control" formControlName="email" id="email">
+            <p class="error" *ngIf="checkControl('email', 'required')">Este campo es requerido</p>
+            <p class="error" *ngIf="checkControl('email', 'pattern')">El email tiene formato incorrecto</p>
         </div>
 
         <div>
             <label for="image">Imagen Usuario</label>
-            <input type="text" placeholder="Introduzca url de foto usuario" class="form form-control" formControlName="image" id="image">
+            <input type="text" placeholder="Introduzca URL de foto usuario" class="form form-control" formControlName="image" id="image">
+            <p class="error" *ngIf="checkControl('image', 'required')">Este campo es requerido</p>
+            <p class="error" *ngIf="checkControl('image', 'pattern')">La URL de la imagen tiene formato incorrecto</p>
         </div>
 
-        <input type="submit" class="btn btn-danger" value="Guardar">
+        <input type="submit" class="btn btn-danger mt-4" value="Guardar">
     </form>
-
 </section>
