--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,32 +1,32 @@
 <section class="container mt-3">
     <h1>{{ updatingUser() ? 'ACTUALIZAR USUARIO' : 'NUEVO USUARIO' }}</h1>
     <form [formGroup]="profileForm" (ngSubmit)="getDataForm()">
-        <div>
-            <label for="first_name">Nombre usuario</label>
-            <input type="text" placeholder="Introduzca nombre de usuario" class="form form-control" formControlName="first_name" id="first_name">
-            <p class="error" *ngIf="checkControl('first_name', 'required')">Este campo es requerido</p>
-        </div>
-
-        <div>
-            <label for="last_name">Apellido Usuario</label>
-            <input type="text" placeholder="Introduzca apellido de usuario" class="form form-control" formControlName="last_name" id="last_name">
-            <p class="error" *ngIf="checkControl('last_name', 'required')">Este campo es requerido</p>
-        </div>
-
-        <div>
-            <label for="email">Email Usuario</label>
-            <input type="text" placeholder="Introduzca email de usuario" class="form form-control" formControlName="email" id="email">
-            <p class="error" *ngIf="checkControl('email', 'required')">Este campo es requerido</p>
-            <p class="error" *ngIf="checkControl('email', 'pattern')">El email tiene formato incorrecto</p>
-        </div>
-
-        <div>
-            <label for="image">Imagen Usuario</label>
-            <input type="text" placeholder="Introduzca URL de foto usuario" class="form form-control" formControlName="image" id="image">
-            <p class="error" *ngIf="checkControl('image', 'required')">Este campo es requerido</p>
-            <p class="error" *ngIf="checkControl('image', 'pattern')">La URL de la imagen tiene formato incorrecto</p>
-        </div>
-
-        <input type="submit" class="btn btn-danger mt-4" [value]="updatingUser() ? 'Actualizar' : 'Guardar'">
+      <div class="mb-3">
+        <label for="first_name" class="form-label">Nombre Usuario</label>
+        <input type="text" placeholder="Introduzca nombre de usuario" class="form-control" formControlName="first_name" id="first_name">
+        <div *ngIf="checkControl('first_name', 'required')" class="text-danger">Este campo es requerido</div>
+      </div>
+  
+      <div class="mb-3">
+        <label for="last_name" class="form-label">Apellido Usuario</label>
+        <input type="text" placeholder="Introduzca apellido de usuario" class="form-control" formControlName="last_name" id="last_name">
+        <div *ngIf="checkControl('last_name', 'required')" class="text-danger">Este campo es requerido</div>
+      </div>
+  
+      <div class="mb-3">
+        <label for="email" class="form-label">Email Usuario</label>
+        <input type="text" placeholder="Introduzca email de usuario" class="form-control" formControlName="email" id="email">
+        <div *ngIf="checkControl('email', 'required')" class="text-danger">Este campo es requerido</div>
+        <div *ngIf="checkControl('email', 'pattern')" class="text-danger">El email tiene formato incorrecto</div>
+      </div>
+  
+      <div class="mb-3">
+        <label for="image" class="form-label">Imagen Usuario</label>
+        <input type="text" placeholder="Introduzca URL de foto usuario" class="form-control" formControlName="image" id="image">
+        <div *ngIf="checkControl('image', 'required')" class="text-danger">Este campo es requerido</div>
+        <div *ngIf="checkControl('image', 'pattern')" class="text-danger">La URL de la imagen tiene formato incorrecto</div>
+      </div>
+  
+      <button type="submit" class="btn btn-danger mt-4">{{ updatingUser() ? 'Actualizar' : 'Guardar' }}</button>
     </form>
-</section>
+  </section>
