--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -1,10 +1,21 @@
 <section class="container mt-3">
-    <img src="{{oneProfile?.image}}" alt="Profile photo">
-    <h1>{{oneProfile?.first_name}}</h1>
-    <h1>{{oneProfile?.last_name}}</h1>
-    <h1>{{oneProfile?.username}}</h1>
-    <h1>{{oneProfile?.email}}</h1>
-    <a class="btn btn-danger" (click)="deleteProfile(oneProfile?._id)">Borrar</a>
-    <a class="btn btn-warning" [routerLink]="['/updateuser', oneProfile?._id]">Actualizar</a>
-    <a class="btn btn-light" [routerLink]="['/home']">Volver al listado</a>
-</section>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="{{oneProfile?.image}}" alt="Profile photo" class="img-fluid rounded-circle">
+      </div>
+      <div class="col-md-7">
+        <h1>{{oneProfile?.first_name}}</h1>
+        <h1>{{oneProfile?.last_name}}</h1>
+        <h1>Nombre de usuario: {{oneProfile?.username}}</h1>
+        <h1>Email: {{oneProfile?.email}}</h1>
+        <a class="btn btn-danger" (click)="deleteProfile(oneProfile?._id)">Borrar</a>
+        <a class="btn btn-warning" [routerLink]="['/updateuser', oneProfile?._id]">Actualizar</a>
+        <a class="btn btn-light" [routerLink]="['/home']">Volver al listado</a>
+      </div>
+    </div>
+  </section>
+  
+  
+  
+  
+  
