Ultimando detalles de la vista

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -27,6 +27,6 @@
         <div *ngIf="checkControl('image', 'pattern')" class="text-danger">La URL de la imagen tiene formato incorrecto</div>
       </div>
   
-      <button type="submit" class="btn btn-danger mt-4">{{ updatingUser() ? 'Actualizar' : 'Guardar' }}</button>
+      <button type="submit" class="btn btn-outline-secondary">{{ updatingUser() ? 'Actualizar' : 'Guardar' }}</button>
     </form>
   </section>
