--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" [routerLink]="['/home']">
       <svg
@@ -54,7 +54,7 @@
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active"[routerLink]="['/newuser']">Nuevo Usuario</a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/newuser']">Nuevo Usuario</a>
         </li>
       </ul>
     </div>
