--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -1,19 +1,30 @@
-<section class="container mt-3">
-    <div class="row">
-      <div class="col-md-4">
-        <img src="{{oneProfile?.image}}" alt="Profile photo" class="img-fluid rounded-circle">
-      </div>
-      <div class="col-md-7">
-        <h1>{{oneProfile?.first_name}}</h1>
-        <h1>{{oneProfile?.last_name}}</h1>
-        <h1>Nombre de usuario: {{oneProfile?.username}}</h1>
-        <h1>Email: {{oneProfile?.email}}</h1>
-        <a class="btn btn-danger" (click)="deleteProfile(oneProfile?._id)">Borrar</a>
-        <a class="btn btn-warning" [routerLink]="['/updateuser', oneProfile?._id]">Actualizar</a>
-        <a class="btn btn-light" [routerLink]="['/home']">Volver al listado</a>
+<section class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 border-right">
+      <img src="{{oneProfile?.image}}" alt="Profile photo" class="img-fluid rounded-circle">
+    </div>
+    <div class="col-md-6 ml-4" >
+        <h2 class="m-2">{{oneProfile?.first_name}}</h2>
+        <h2 class="m-2">{{oneProfile?.last_name}}</h2>
+        <div class="d-flex">
+            <strong class="m-2">Nombre de usuario: </strong>
+            <p class="m-2">{{oneProfile?.username}}</p>
+        </div>
+        <div class="d-flex">
+            <strong class="m-2">Email: </strong>
+            <p class="m-2">{{oneProfile?.email}}</p>
+        </div>
+      <div class="btn-group toogle mt-5 m-2" >
+        <a class="btn btn-outline-secondary" (click)="deleteProfile(oneProfile?._id)">Borrar</a>
+        <a class="btn btn-outline-secondary" [routerLink]="['/updateuser', oneProfile?._id]">Actualizar</a>
+        <a class="btn btn-outline-secondary" [routerLink]="['/home']">Volver al listado</a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
+
   
   
   
