--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -14,6 +14,12 @@
             <strong class="m-2">Email: </strong>
             <p class="m-2">{{oneProfile?.email}}</p>
         </div>
+
+        <div class="d-flex">
+          <strong class="m-2">Contraseña: </strong>
+          <p class="m-2">{{oneProfile?.password}}</p>
+      </div>
+
       <div class="btn-group toogle mt-5 m-2" >
         <a class="btn btn-outline-secondary" (click)="deleteProfile(oneProfile?._id)">Borrar</a>
         <a class="btn btn-outline-secondary" [routerLink]="['/updateuser', oneProfile?._id]">Actualizar</a>
